# OptiK8s

./: Makefile  README.md  pods.json  port-forward.sh  pyproject.toml
.github/: dependabot.yml
apps/java-spring/k8s/: deployment.yaml  service.yaml
apps/nodejs-web/k8s/: deployment.yaml  service.yaml
apps/postgres-db/k8s/: deployment.yaml  service.yaml
apps/python-api/k8s/: deployment.yaml  service.yaml
apps/redis-cache/k8s/: deployment.yaml  service.yaml
clusters/eks/: cluster-config.yaml
clusters/kind/: cluster-config.yaml
monitoring/prometheus/: values.yaml
optik8s/: __init__.py
optik8s/cli/: __init__.py  main.py
optik8s/core/: __init__.py  ai.py  apps.py  cluster.py  metrics.py  monitoring.py  rules.py  simulator.py
optik8s/ui/: __init__.py  app.py
optik8s/ui/static/: app.js  style.css
optik8s/ui/templates/: base.html  index.html
samples/: data-pipeline.json  ecommerce.json  microservices.json  overprovisioned.json  peak-load.json  saas-platform.json
tests/: test_optik8s.py
